start of template framework

--- a/passworddialog.ui
+++ b/passworddialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>251</width>
-    <height>226</height>
+    <width>425</width>
+    <height>359</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -67,6 +67,24 @@
         <property name="text">
          <string>Show password</string>
         </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QWidget" name="templateHolderWidget" native="true">
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <property name="leftMargin">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+        </layout>
        </widget>
       </item>
       <item>
