--- a/dialog.ui
+++ b/dialog.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>763</width>
+    <width>704</width>
     <height>309</height>
    </rect>
   </property>
@@ -29,7 +29,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>3</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab_3">
       <attribute name="title">
@@ -393,14 +393,14 @@
          <item row="2" column="2">
           <widget class="QCheckBox" name="checkBoxAutoPush">
            <property name="text">
-            <string>Automatically push updates</string>
+            <string>Automatically push</string>
            </property>
           </widget>
          </item>
          <item row="2" column="1">
           <widget class="QCheckBox" name="checkBoxAutoPull">
            <property name="text">
-            <string>Automatically pull in updates</string>
+            <string>Automatically pull</string>
            </property>
           </widget>
          </item>
