--- a/dialog.ui
+++ b/dialog.ui
@@ -496,24 +496,23 @@
        <string>Template</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_6">
-       <property name="leftMargin">
-        <number>6</number>
-       </property>
-       <property name="topMargin">
-        <number>6</number>
-       </property>
-       <property name="rightMargin">
-        <number>6</number>
-       </property>
-       <property name="bottomMargin">
-        <number>6</number>
-       </property>
        <item>
-        <widget class="QCheckBox" name="checkBoxUseTemplate">
-         <property name="text">
-          <string>Use template</string>
-         </property>
-        </widget>
+        <layout class="QHBoxLayout" name="horizontalLayout_8">
+         <item>
+          <widget class="QCheckBox" name="checkBoxUseTemplate">
+           <property name="text">
+            <string>Use template</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QCheckBox" name="checkBoxTemplateAllFields">
+           <property name="text">
+            <string>Show all fields templated</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
        <item>
         <widget class="QPlainTextEdit" name="plainTextEditTemplate">
