--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -86,6 +86,16 @@
         </widget>
        </item>
        <item>
+        <widget class="QToolButton" name="copyPasswordButton">
+         <property name="toolTip">
+          <string>Copy Password</string>
+         </property>
+         <property name="text">
+          <string>Password</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
