--- a/configdialog.ui
+++ b/configdialog.ui
@@ -400,6 +400,13 @@
          <item row="0" column="0">
           <widget class="QComboBox" name="comboBoxClipboard"/>
          </item>
+         <item row="6" column="3">
+          <widget class="QCheckBox" name="checkBoxAlwaysOnTop">
+           <property name="text">
+            <string>Always on top</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
       </layout>
